--- a/mobile.html
+++ b/mobile.html
@@ -8,34 +8,51 @@
     font-family: Arial, sans-serif; 
     margin: 0;
     display: flex;
-    flex-direction: column; /* 上下排列 */
-    height: 100vh; /* 使用整個視窗高度 */
+    flex-direction: column;
+    height: 100vh;
   }
   #editor { 
     height: 30%; /* 分配給編輯器的高度為50% */
-    width: 100%; /* 滿寬 */
-    padding: 20px; /* 增加內邊距 */
-    box-sizing: border-box; /* 包含邊框和內邊距在內的寬度計算方式 */
-    border-top: 1px solid #ccc; /* 分隔線，現在放在上方 */
-    resize: none; /* 防止調整大小 */
-    font-size: 16px; /* 設定文字大小 */
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border-top: 1px solid #ccc;
+    resize: none;
+    overflow: auto;
+    font-size: 14px; /* 較小的字體大小適合手機閱讀 */
   }
-  #editor::placeholder { /* 設定占位符的樣式 */
-    font-size: 36px; /* 占位符文字大小 */
-    color: #888; /* 占位符文字顏色 */
+  #editor::placeholder {
+    font-size: 14px;
+    color: #888;
   }
   #iframe-container {
-    flex: 1; /* 佔據剩餘空間 */
-    width: 100%; /* 滿寬 */
-    border: none; /* 移除邊框 */
-    overflow: auto; /* 內容過多時允許滾動 */
-    background-color: white; /* 背景設為白色 */
-    box-shadow: none; /* 移除陰影 */
+    flex: 1;
+    width: 100%;
+    overflow: auto;
+    background-color: white;
+    border: none;
   }
   iframe {
     width: 100%;
     height: 100%;
     border: none;
+  }
+
+  /* 響應式布局調整 */
+  @media (max-width: 600px) {
+    body {
+      flex-direction: column; /* 在小螢幕上維持上下排列 */
+    }
+    #editor, #iframe-container {
+      flex: none;
+      height: 50vh; /* 在小螢幕上，編輯器和預覽區各占一半高度 */
+    }
+    #editor {
+      font-size: 16px; /* 增大字體以提高可讀性 */
+    }
+    #editor::placeholder {
+      font-size: 16px;
+    }
   }
 </style>
 </head>
