--- a/mobile.html
+++ b/mobile.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>快速HTML檢視器</title>
+<title>簡易HTML編輯器</title>
 <style>
   body { 
     font-family: Arial, sans-serif; 
@@ -11,15 +11,6 @@
     flex-direction: column;
     height: 100vh;
     align-items: center; /* 中心對齊子元素 */
-    justify-content: center; /* 同樣中心對齊，確保內容垂直居中 */
-  }
-  #editor { 
-    flex: 1;
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    resize: none;
-    font-size: 14px;
   }
   #iframe-container {
     flex: 1;
@@ -34,7 +25,7 @@
     border: none;
   }
   #modal {
-    display: none; 
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -49,15 +40,15 @@
     margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 90%; /* 調寬以適應更大的輸入框 */
-    max-width: 600px; /* 確保不會過大 */
+    width: 90%;
+    max-width: 600px;
   }
   #modal-input {
-    width: 100%; /* 輸入框滿寬 */
-    height: 200px; /* 增加輸入框的高度 */
+    width: 100%;
+    height: 200px;
     padding: 10px;
-    font-size: 16px; /* 增加字體大小 */
-    box-sizing: border-box; /* 包含邊框和內邊距 */
+    font-size: 16px;
+    box-sizing: border-box;
   }
   #close {
     color: #aaa;
@@ -73,8 +64,9 @@
   }
   button {
     width: 100%;
+    height: 60px;
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 28px;
     padding: 10px 20px;
     background-color: gray;
     color: white;
@@ -88,10 +80,10 @@
 </style>
 </head>
 <body>
+  <button onclick="openModal()">導入HTML</button> <!-- 按鈕位置調整到最上方 -->
   <div id="iframe-container">
     <iframe id="preview"></iframe>
   </div>
-  <button onclick="openModal()">導入HTML</button>
   <textarea id="editor" style="display:none;"></textarea> <!-- 隱藏原始的輸入框 -->
 
   <!-- 模態框 -->
