--- a/mobile.html
+++ b/mobile.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>簡易HTML編輯器</title>
+<title>簡易HTML預覽器</title>
 <style>
   body { 
     font-family: Arial, sans-serif; 
@@ -79,7 +79,7 @@
 </style>
 </head>
 <body>
-  <button onclick="openModal()">導入HTML</button> <!-- 按鈕位置調整到最上方 -->
+  <button onclick="openModal()">點擊導入HTML</button> <!-- 按鈕位置調整到最上方 -->
   <div id="iframe-container">
     <iframe id="preview"></iframe>
   </div>
