--- a/mobile.html
+++ b/mobile.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>簡易HTML預覽器</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> <!-- 禁用縮放 -->
 <style>
   body { 
     font-family: Arial, sans-serif; 
@@ -47,7 +48,7 @@
     width: 100%;
     height: 200px;
     padding: 10px;
-    font-size: 16px;
+    font-size: 32px;
     box-sizing: border-box;
   }
   #close {
@@ -64,13 +65,12 @@
   }
   button {
     width: 100%;
-    height: 100px;
-    font-size: 28px;
+    height: 120px;
+    font-size: 36px;
     padding: 10px 20px;
     background-color: gray;
     color: white;
     border: none;
-
     cursor: pointer;
   }
   button:hover {
