--- a/auntyya.html
+++ b/auntyya.html
@@ -35,7 +35,7 @@
             margin-bottom: 10px;
             font-size: 18px;
         }
-        textarea {
+        #inputTextArea, #outputTextArea {
             width: 96%;
             height: 80px;
             margin-bottom: 20px;
@@ -46,7 +46,7 @@
             resize: none;
             background-color: #f9f9f9;
         }
-        button {
+        #clearBtn, #voiceBtn, #completeOrderBtn {
             font-size: 14px;
             padding: 10px 15px;
             background-color: #6c757d;
@@ -60,13 +60,13 @@
             background-color: #adb5bd;
         }
         #voiceBtn.recording {
-            background-color: #343a40; /* Button active color */
+            background-color: #343a40; /* 按鈕激活時的顏色 */
         }
         #completeOrderBtn {
             background-color: #6c757d;
             margin-top: 10px;
         }
-        table {
+        #orderTable {
             border-collapse: collapse;
             width: 100%;
             margin-bottom: 20px;
@@ -80,7 +80,12 @@
         th {
             background-color: #e9ecef;
         }
-        .quantityBtn, .deleteBtn {
+        #totalPrice {
+            font-weight: bold;
+            font-size: 16px;
+        }
+        .quantityBtn {
+            cursor: pointer;
             font-size: 14px;
             padding: 5px 10px;
             background-color: #6c757d;
@@ -90,7 +95,14 @@
             margin-right: 5px;
         }
         .deleteBtn {
+            cursor: pointer;
+            font-size: 14px;
+            padding: 5px 10px;
             background-color: #adb5bd;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            margin-right: 5px;
         }
     </style>
 </head>
@@ -102,6 +114,9 @@
         <textarea id="inputTextArea" placeholder="點擊後開啟語音輸入..." oninput="analyzeText()"></textarea>
         <button id="voiceBtn" onclick="startVoiceInput()">開始語音輸入</button>
         <button id="clearBtn" onclick="clearText()">清除點餐</button>
+
+        <br>
+        <br>
 
         <table id="orderTable">
             <thead>
@@ -132,44 +147,79 @@
             "綜合麵線": 50,
             "清麵線": 40,
             "純麵線": 40,
-            // 更多餐點項目...
+            "大腸麵線-加辣": 50,
+            "肉羹麵線-加辣": 50,
+            "綜合麵線-加辣": 50,
+            "清麵線-加辣": 40,
+            "純麵線-加辣": 40,
+            "大炒麵": 40,
+            "小炒麵": 30,
+            "荷包蛋": 15,
+            "貢丸湯": 35,
+            "肉羹湯": 35,
+            "綜合湯": 35,  
+            "紅茶": 10,            
+            "奶茶": 15,
+            "豆漿": 15,
+            "米漿": 15
         };
 
         var homophones = {
             "麵": ["面", "念", "唸"],
             "線": ["鮮"],
-            // 更多同音字...
-        };
+            "綜": ["中"],
+            "辣": ["拉","那"],
+            "合": ["和"],            
+            "清": ["青","金","新","稀"],
+            "炒": ["草", "早", "找","島"],
+            "芝麻蔥油餅": ["蔥油餅", "不加蛋","附加蛋"],
+            "蔥油餅加蛋": ["蛋餅", "加蛋"],
+            "蛋餅加荷包蛋": ["蛋蔥油餅加蛋"],
+            "大腸麵線": ["大腸","大腸麵線麵線"],
+            "綜合湯": ["綜合麵線湯"],
+            "綜合麵線": ["綜合","綜合麵線麵線"],
+            "肉羹麵線": ["肉羹","肉羹麵線麵線"],
+            "肉羹湯": ["肉羹麵線湯"],
+            "清麵線": ["清","清麵線麵線"],
+            "純麵線": ["純","純麵線麵線"],
+            "大炒麵": ["大炒","大炒麵麵","炒麵"],
+            "小炒麵": ["小炒","小大炒麵麵"], 
+            "荷包蛋": ["荷8蛋"],           
+            "蔥油餅加蛋-加辣": ["蔥油餅加蛋辣","蔥油餅加蛋加辣"],
+            "芝麻蔥油餅-加辣": ["芝麻蔥油餅加辣","芝麻蔥油餅辣"],
+            "大腸麵線-加辣": ["大腸麵線加辣","大腸麵線辣"],
+           "肉羹麵線-加辣": ["肉羹麵線加辣","肉羹麵線辣"],
+           "綜合麵線-加辣": ["綜合麵線加辣","綜合麵線辣"],
+           "清麵線-加辣": ["清麵線加辣","清麵線辣"],
 
-        function simplifyHomophonesData(homophones) {
-            var simplifiedHomophones = {};
-            for (var key in homophones) {
-                if (homophones.hasOwnProperty(key)) {
-                    var values = homophones[key];
-                    if (values.length > 1) {
-                        simplifiedHomophones[key] = [values[0], values[values.length - 1]];
-                    } else {
-                        simplifiedHomophones[key] = values;
-                    }
-                }
-            }
-            return simplifiedHomophones;
-        }
+            "份": ["碗", "杯", "個","玩","顆","婉","晚","分","噸","完"],
+            "1": ["一", "億"],
+            "2": ["兩", "量","涼"],
+            "3": ["三", "參"],
+            "4": ["四", "是","試"],
+            "5": ["五", "無", "午"],
+            "6": ["六", "溜"],
+            "7": ["七", "妻"],
+            "8": ["八", "咖", "包"],
+            "9": ["九", "酒"],
+            "10": ["十", "時"]
+        };
 
         function analyzeText() {
             var inputText = document.getElementById('inputTextArea').value;
             var matchedInfo = [];
             var totalAmount = 0;
 
-            var simplifiedHomophones = simplifyHomophonesData(homophones);
-            for (var homophone in simplifiedHomophones) {
-                var homophoneArray = simplifiedHomophones[homophone];
+            // 同音字修正
+            for (var homophone in homophones) {
+                var homophoneArray = homophones[homophone];
                 for (var i = 0; i < homophoneArray.length; i++) {
                     var pattern = new RegExp(homophoneArray[i], 'gi');
                     inputText = inputText.replace(pattern, homophone);
                 }
             }
 
+            // 商品計價邏輯
             for (var item in itemPrices) {
                 var pattern = new RegExp(item + "\\s*(\\d+)份", 'gi');
                 inputText = inputText.replace(pattern, function(match, quantity) {
@@ -177,15 +227,19 @@
                     var totalPrice = quantity * itemPrices[item];
                     addToMatchedInfo(matchedInfo, item, quantity, totalPrice);
                     totalAmount += totalPrice;
-                    return "";
+                    return ""; // 移除已處理的文字
                 });
             }
 
+            // 更新訂單表格和總金額
             updateOrderTable(matchedInfo, totalAmount);
         }
 
         function addToMatchedInfo(matchedInfo, item, quantity, totalPrice) {
-            var existingItem = matchedInfo.find(element => element.name === item);
+            var existingItem = matchedInfo.find(function(element) {
+                return element.name === item;
+            });
+
             if (existingItem) {
                 existingItem.quantity += quantity;
                 existingItem.totalPrice += totalPrice;
@@ -202,45 +256,58 @@
         function updateOrderTable(matchedInfo, totalAmount) {
             var tableBody = document.getElementById('orderTableBody');
             tableBody.innerHTML = "";
+
             matchedInfo.forEach(function(item) {
                 var row = tableBody.insertRow();
-                row.insertCell(0).textContent = item.name;
-                row.insertCell(1).textContent = item.price;
-                row.insertCell(2).textContent = item.quantity;
-                row.insertCell(3).textContent = item.totalPrice;
+                var nameCell = row.insertCell(0);
+                var priceCell = row.insertCell(1);
+                var quantityCell = row.insertCell(2);
+                var totalPriceCell = row.insertCell(3);
+                var actionCell = row.insertCell(4);
 
+                nameCell.innerHTML = item.name;
+                priceCell.innerHTML = item.price;
+                quantityCell.innerHTML = item.quantity;
+                totalPriceCell.innerHTML = item.totalPrice;
+
+                // 增加和減少數量的按鈕
                 var incrementBtn = document.createElement("button");
-                incrementBtn.textContent = "+";
-                incrementBtn.className = "quantityBtn";
+                incrementBtn.innerHTML = "+";
+                incrementBtn.classList.add("quantityBtn");
                 incrementBtn.onclick = function() {
                     item.quantity++;
                     item.totalPrice += item.price;
+                    quantityCell.innerHTML = item.quantity;
+                    totalPriceCell.innerHTML = item.totalPrice;
                     updateTotalPrice(matchedInfo);
                 };
 
                 var decrementBtn = document.createElement("button");
-                decrementBtn.textContent = "-";
-                decrementBtn.className = "quantityBtn";
+                decrementBtn.innerHTML = "-";
+                decrementBtn.classList.add("quantityBtn");
                 decrementBtn.onclick = function() {
                     if (item.quantity > 1) {
                         item.quantity--;
                         item.totalPrice -= item.price;
+                        quantityCell.innerHTML = item.quantity;
+                        totalPriceCell.innerHTML = item.totalPrice;
                         updateTotalPrice(matchedInfo);
                     }
                 };
 
+                // 刪除按鈕
                 var deleteBtn = document.createElement("button");
-                deleteBtn.textContent = "刪除";
-                deleteBtn.className = "deleteBtn";
+                deleteBtn.innerHTML = "刪除";
+                deleteBtn.classList.add("deleteBtn");
                 deleteBtn.onclick = function() {
                     matchedInfo.splice(matchedInfo.indexOf(item), 1);
                     row.remove();
                     updateTotalPrice(matchedInfo);
                 };
-var actionCell = row.insertCell(4);
+
                 actionCell.appendChild(decrementBtn);
                 actionCell.appendChild(incrementBtn);
-                actionConfigCell.appendChild(deleteBtn);
+                actionCell.appendChild(deleteBtn);
             });
 
             updateTotalPrice(matchedInfo);
@@ -248,8 +315,10 @@ var actionCell = row.insertCell(4);
 
         function updateTotalPrice(matchedInfo) {
             var totalPriceSpan = document.getElementById('totalPrice');
-            var totalAmount = matchedInfo.reduce((acc, item) => acc + item.totalPrice, 0);
-            totalPriceSpan.textContent = totalAmount + '元';
+            var totalAmount = matchedInfo.reduce(function(acc, item) {
+                return acc + item.totalPrice;
+            }, 0);
+            totalPriceSpan.innerHTML = totalAmount;
         }
 
         function clearText() {
@@ -259,23 +328,18 @@ var actionCell = row.insertCell(4);
         }
 
         function completeOrder() {
-            if (matchedInfo.length === 0) {
-                alert("請先添加訂單項目。");
-                return;
-            }
-            localStorage.setItem('orders', JSON.stringify(matchedInfo));
-            window.location.href = 'list.html';  // 跳轉到訂單顯示頁面
+            clearText();
         }
 
         function startVoiceInput() {
             const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
             if (!SpeechRecognition) {
-                alert("您的瀏覽器不支持語音識別功能，請使用支持此功能的瀏覽器。");
+                alert("您的瀏覽器不支援語音識別功能，請使用最新的Chrome或Edge瀏覽器。");
                 return;
             }
 
             const recognition = new SpeechRecognition();
-            recognition.lang = 'zh-TW';
+            recognition.lang = 'zh-TW'; // 設置語言為中文(台灣)
             const output = document.getElementById('inputTextArea');
             var isRecording = false;
 
@@ -292,22 +356,37 @@ var actionCell = row.insertCell(4);
             };
 
             recognition.onend = function() {
-                isRecording = false;
-                document.getElementById('voiceBtn').classList.remove('recording');
-                document.getElementById('voiceBtn').textContent = '開始語音輸入';
-            };
-
-            recognition.onerror = function(event) {
-                console.error('語音識別錯誤:', event.error);
-                alert('語音識別錯誤: ' + event.error);
+                if (isRecording) {
+                    isRecording = false;
+                    document.getElementById('voiceBtn').classList.remove('recording');
+                    document.getElementById('voiceBtn').textContent = '開始語音輸入';
+                }
             };
 
             document.getElementById('voiceBtn').onclick = function() {
                 if (isRecording) {
                     recognition.stop();
-                } else {
-                    recognition.start();
+                    return;
                 }
+                recognition.start();
+            };
+
+            recognition.onerror = function(event) {
+                console.error('語音識別錯誤:', event.error);
+                let errorMessage = '語音識別錯誤，請重試。';
+                switch(event.error) {
+                    case 'no-speech':
+                        errorMessage = '未偵測到語音，請再試一次。';
+                        break;
+                    case 'audio-capture':
+                        errorMessage = '未能捕獲音頻，請檢查麥克風是否已啟用。';
+                        break;
+                    case 'not-allowed':
+                        errorMessage = '語音識別被阻止，請檢查瀏覽器權限設置。';
+                        break;
+                    // 可以添加更多的錯誤處理
+                }
+                alert(errorMessage);
             };
         }
     </script>
